# Slice-Guard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  __main__.py  compose.yaml  package.json  prettier.config.mjs  pyproject.toml
.claude/: settings.json
.github/workflows/: backend-tests.yml
slice-guard/backend/: Dockerfile  WS_ROUTES.md  eslint.config.js  package.json  tsconfig.json
slice-guard/backend/migrations/: 001_init.sql  002_labs.sql  004_api_keys.sql
slice-guard/backend/schema/: auth.sql  lab.sql
slice-guard/backend/src/: server.ts
slice-guard/backend/src/db/: lab.ts  request.ts  (+1 more)
slice-guard/backend/tests/: assign_tag_route.test.ts  auth_middleware.test.ts  auth_routes.test.ts  channel.test.ts  db.test.ts  invite.test.ts  lab.test.ts  member.test.ts  message.test.ts  parser.test.ts  permissions.test.ts  refresh.test.ts  request.test.ts  state.test.ts  storage.test.ts  utils.test.ts
slice-guard/docs/: 2024-05-permissions-and-ui.md
slice-guard/frontend/: Dockerfile  README.md  eslint.config.js  index.html  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
slice-guard/frontend/src/: App.vue  main.ts  style.css
slice-guard/shared/db/: channel.ts  lab.ts  message.ts  request.ts  user.ts
slice-guard/shared/payloads/: auth.ts  channel.ts  index.ts  invite.ts  lab.ts  request.ts  ws.ts
slice-guard/shared/ws/: errors.ts  opcodes.ts
tests/sliced_files/: benchy_sliced.3mf
three_parser/: __init__.py  exceptions.py  parser.py  plate.py
three_parser/types/: plate.py  project.py
(+129 files in other folders)
