[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["3mf_parser"]

[tool.setuptools.package-data]
fortnite_api = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "3mf_parser.__version__" }

[project]
name = "3mf-usf-egn3000l-parser"
dynamic = ["version"]
dependencies = ["orjson", "click", "aiofiles", "gcodeparser"]
requires-python = ">=3.12"

license = { file = "LICENSE" }

authors = [{ name = "Trevor Flahardy", email = "trevorflahardy@gmail.com" }]
maintainers = [{ name = "Trevor Flahardy", email = "trevorflahardy@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.black]
line-length = 125
skip-string-normalization = true
force-exclude = "LICENSE|pyproject.toml|requirements.txt|README.rst|schema.sql|.+.json|README.md|.+.bat|.+.service|.+.sql"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
reportUnusedImport = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportIncompatibleMethodOverride = "none"
reportPrivateUsage = "none"
reportImportCycles = "none"
exclude = ["**/__pycache__", '.github', 'typings']

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125
